# FadeMem

./: .gitignore  LICENSE  README.md  pyproject.toml  test_echomem.py
engram/: __init__.py  example_agent.py  exceptions.py  mcp_server.py  test_no_api.py  test_quick.py
engram/configs/: base.py
engram/core/: __init__.py  category.py  conflict.py  decay.py  retrieval.py
engram/db/: sqlite.py
engram/embeddings/: openai.py
engram/llms/: base.py  gemini.py  mock.py
engram/memory/: client.py  main.py
engram/utils/: factory.py
engram/vector_stores/: base.py
fadem/: __init__.py  example_agent.py  mcp_server.py  test_quick.py
fadem/configs/: __init__.py  base.py
fadem/core/: __init__.py  echo.py  fusion.py
fadem/db/: sqlite.py
fadem/embeddings/: base.py  gemini.py  simple.py
fadem/llms/: openai.py
fadem/memory/: async_memory.py  client.py  main.py  utils.py
fadem/utils/: prompts.py
fadem/vector_stores/: memory.py  qdrant.py
